[project]
name = "eda4business"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.3.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
all = [
    "pandas>=2.2.3",
]
express = [
    "plotly>=6.0.0",
]
